Orange combat text

--- a/goon/browserassets/css/browserOutput.css
+++ b/goon/browserassets/css/browserOutput.css
@@ -296,6 +296,7 @@ h1.alert, h2.alert		{color: #000000;}
 .golem					{color: #B4DBCB; font-weight: bold;}
 .slime					{color: #34A7Af;}
 .orange					{color: #ffa500;}
+.borange				{color: #ffa500; font-weight: bold;}
 .maroon					{color: #800000;}
 
 /* /vg/ */
