--- a/nano/css/shared.css
+++ b/nano/css/shared.css
@@ -30,7 +30,7 @@ hr {
     height: 1px;
 }
 
-.link, .linkOn, .linkOff, .selected, .disabled {
+.link, .linkOn, .linkOff, .selected, .disabled, .button {
     float: left;
     min-width: 15px;
     height: 16px;
@@ -49,7 +49,7 @@ hr {
     padding: 0px 4px 4px 0px;
 }
 
-a:hover, .zoomLink:hover, .linkActive:hover {
+a:hover, .zoomLink:hover, .linkActive:hover, .buttonActive:hover {
     background: #507aac;
 }
 
@@ -179,6 +179,10 @@ h4 {
 
 .yellowBackground {
     background: #cacc00;
+}
+
+.greenBackground {
+    background: #2f943c;
 }
 
 .highlight {
