--- a/nano/templates/air_alarm.tmpl
+++ b/nano/templates/air_alarm.tmpl
@@ -221,7 +221,7 @@ Used In File(s): /code/game/machinery/alarm.dm
 		<div class="statusDisplay">
 			{{for data.presets}}
 			<div class="line">
-				<div class="statusLabel">{{:helper.link(value.name,'gear',{'preset':index+1},null,(index+1==data.preset?'linkOn':''))}}</div>
+				<div class="statusLabel">{{:helper.link(value.name,'gear',{'preset':value.name},null,(value.name==data.preset?'linkOn':''))}}</div>
 				<div class="statusValue">
 					{{:value.desc}}
 				</div>
