--- a/nano/templates/air_alarm.tmpl
+++ b/nano/templates/air_alarm.tmpl
@@ -75,14 +75,14 @@ Used In File(s): /code/game/machinery/alarm.dm
 			<div class="statusLabel">Local Status:</div>
 			{{if data.air.danger.overall == 0}}
 				{{if data.atmos_alarm}}
-					<div class="average">Caution: Atmos alert in area
+					<div class="average">Caution: Atmos alert in area</div>
 				{{else}}
-					<div class="good">Optimal
+					<div class="good">Optimal</div>
 				{{/if}}
 			{{else data.air.danger.overall == 1}}
-				<div class="average">Caution
+				<div class="average">Caution</div>
 			{{else}}
-				<div class="notice">DANGER: Internals Required
+				<div class="notice">DANGER: Internals Required</div>
 			{{/if}}
 			{{if !data.locked}}
 				{{if data.alarmActivated}}
@@ -90,8 +90,12 @@ Used In File(s): /code/game/machinery/alarm.dm
 				{{else}}
 					{{:helper.link('Activate Alarm',null,{'atmos_alarm':1},null,'red')}}
 				{{/if}}
+				{{if data.firedoor_override}}
+					{{:helper.link('Manual override enabled', null, {'disable_override':1}, null, 'linkOn')}}
+				{{else}}
+					{{:helper.link('Manual override disabled', null, {'enable_override':1}, null, 'red')}}
+				{{/if}}
 			{{/if}}
-			</div>
 		</div>
 		<div class="line">
 			<!--
@@ -217,7 +221,14 @@ Used In File(s): /code/game/machinery/alarm.dm
 			{{/for}}
 		</div>
 		<h3>System Preset</h3>
-		<div class="notice">After making a selection, the system will automatically cycle in order to remove contaminants.</div>
+		<div class="line">
+			Cycle after changing preset 
+			{{if data.cycle_after_preset}}
+				{{:helper.link('Yes', null, {'toggle_cycle_after_preset':1}, null, 'greenBackground')}}
+			{{else}}
+				{{:helper.link('No', null, {'toggle_cycle_after_preset':1}, null, 'redBackground')}}
+			{{/if}}
+		</div>
 		<div class="statusDisplay">
 			{{for data.presets}}
 			<div class="line">
@@ -231,6 +242,9 @@ Used In File(s): /code/game/machinery/alarm.dm
 	<!-- SENSORS -->
 	{{else data.screen == 5}}
 		<h3>Sensor Thresholds</h3>
+		<div class="line">
+			{{:helper.link("Reset", "arrowreturn-1-w", {'reset_thresholds':1})}}
+		</div>
 		<div class="statusDisplay">
 			<table>
 				<thead>
