--- a/nano/templates/air_alarm.tmpl
+++ b/nano/templates/air_alarm.tmpl
@@ -137,30 +137,38 @@ Used In File(s): /code/game/machinery/alarm.dm
 					<b>{{>value.name}}:</b>
 				</div>
 				<div class="line">
-					<div class="statusLabel">Operating:</div>
+					<div class="statusLabelWide">Operating:</div>
 					<div class="statusValue">
 						{{:helper.link(value.power ? 'On':'Off','power',{'id_tag':value.id_tag,'command':'power','val':value.power?0:1},null,(value.power?'linkOn':'red'))}}
 						{{if value.direction==0}}
 							{{:helper.link('Siphoning','arrowthickstop-1-s',{'id_tag':value.id_tag,'command':'direction','val':'1'})}}
 						{{else}}
-							{{:helper.link('Releasing','arrowthick-1-n',{'id_tag':value.id_tag,'command':'direction','val':'0'})}}
+							{{:helper.link('Blowing','arrowthick-1-n',{'id_tag':value.id_tag,'command':'direction','val':'0'})}}
 						{{/if}}
 					</div>
 				</div>
 				<div class="line">
-					<div class="statusLabel">Pressure checks:</div>
+					<div class="statusLabelWide">Pressure checks:</div>
 					<div class="statusValue">
 						{{:helper.link('External','power',{'id_tag':value.id_tag,'command':'checks','val':helper.xor(value.checks,1)},null,(value.checks & 1 ?'linkOn':'red'))}}
 						{{:helper.link('Internal','power',{'id_tag':value.id_tag,'command':'checks','val':helper.xor(value.checks,2)},null,(value.checks & 2 ?'linkOn':'red'))}}
 					</div>
 				</div>
 				<div class="line">
-					<div class="statusLabel">External pressure target:</div>
+					<div class="statusLabelWide">External pressure target:</div>
 					<div class="statusValue">
 						{{:helper.precisionRound(value.external,4)}} kPa
 					</div>
 					{{:helper.link('Set','gear',{'id_tag':value.id_tag,'command':'set_external_pressure'})}}
 					{{:helper.link('Reset','arrowrefresh-1-n',{'id_tag':value.id_tag,'command':'set_external_pressure','val':101.325},null,'linkOn')}}
+				</div>
+				<div class="line">
+					<div class="statusLabelWide">Internal pressure target:</div>
+					<div class="statusValue">
+						{{:helper.precisionRound(value.internal,4)}} kPa
+					</div>
+					{{:helper.link('Set','gear',{'id_tag':value.id_tag,'command':'set_internal_pressure'})}}
+					{{:helper.link('Reset','arrowrefresh-1-n',{'id_tag':value.id_tag,'command':'set_internal_pressure','val':0},null,'linkOn')}}
 				</div>
 			</div>
 		{{empty}}
