--- a/html/browser/cmc.css
+++ b/html/browser/cmc.css
@@ -1,3 +1,8 @@
+/* 
+Title: Crew Monitor Textview
+Used In File(s): \code\modules\cmc\crew.dm
+*/
+
 body {
   background-image: url("cmc_background.png");
   color: white;
@@ -23,20 +28,20 @@ a {
   box-shadow: 0px 0px 5px 1px grey;
 }
 
-.toxin {
-  color: #00CD00;
-}
-
-.oxygen {
-  color: #0080ff;
-}
-
 .fire {
-  color: #ffa500;
+  color: orange;
 }
 
 .brute {
-  color: #ff0000;
+  color: red;
+}
+
+.toxin {
+  color: green;
+}
+
+.oxygen {
+  color: blue;
 }
 
 .name {
