--- a/nano/templates/cmc.tmpl
+++ b/nano/templates/cmc.tmpl
@@ -12,24 +12,19 @@ Used In File(s): \code\modules\cmc\crew.dm
             <a style='margin-right: 10px;' href='?src=\ref[src];toggle=1' id='update_btn'>{{if data.update}}Disable {{else}}Enable {{/if}}Updating</a>
             <a href='?src=\ref[src];holo=1' id='holo_btn'>{{if data.holo}}Disable {{else}}Enable {{/if}}Holomap</a>
             <hr><br>
-            <table align='center'>
-                <tr>
-                    <th><u>Name</u></th>
-                    <th><u>Vitals</u></th>
-                    <th><u>Position</u></th>
-                </tr>
-                <span id='contents'><td colspan="3">Loading...</td></span>
+            <table align='center' id='contents'>
             </table>
         </kbd>
         <script>
         function populateTable(entries_string){
             var entries = $.parseJSON(entries_string);
-            var string = "";
-            for(entry in entries){
-                string = "<td><span class='name "+entry.role+"'>"+entry.name+"</span> ("+entry.job+")</td>";
+            var string = "<tr><th><u>Name</u></th><th><u>Vitals</u></th><th><u>Position</u></th></tr>";
+            for(var i in entries){
+                entry = entries[i];
+                string += "<tr><td><span class='name "+entry.role+"'>"+entry.name+"</span> ("+entry.job+")</td>";
                 string += "<td><img src='cmc_"+entry.icon+".png' height='11' width='11'/>";
                 if(entry.damage){
-                    string +=  "(<span class='oxygen'>"+entry.role.oxygen+"</span>/<span class='toxin'>"+entry.role.toxin+"</span>/<span class='fire'>"+entry.role.fire+"</span>/<span class='brute'>"+entry.role.brute+"</span>)";
+                    string +=  "(<span class='oxygen'>"+entry.damage.oxygen+"</span>/<span class='toxin'>"+entry.damage.toxin+"</span>/<span class='fire'>"+entry.damage.fire+"</span>/<span class='brute'>"+entry.damage.brute+"</span>)";
                 } else {
                     string += "Not Available";
                 }
@@ -39,10 +34,10 @@ Used In File(s): \code\modules\cmc\crew.dm
                 } else {
                     string += "Not Available";
                 }
-                string += "</td>";
+                string += "</td></tr>";
             }
 
-            $("#contents").innerHTML = string;
+            $("#contents").html(string);
         }
 
         function toggleHolobtn(){
