--- a/nano/templates/atmos_control_map_header.tmpl
+++ b/nano/templates/atmos_control_map_header.tmpl
@@ -10,7 +10,10 @@ Used In File(s): \code\workinprogress\mini\atmos_control.dm
     <div class="line">
         Logged in as: <b>{{:data.login_name}}</b> {{:helper.link('Log out', 'locked', {'logout': 1, 'showMap': 0}, (data.emagged) ? 'disabled' : null)}}
     </div>
-    {{:helper.link('Show Detail List', 'script', {'showMap' : 0})}}
+    {{:helper.link('Show Detail List', 'script', {'showMap' : 0, 'set_screen': 1})}}
+    {{if data.admin_access}}
+        {{:helper.link('Show Presets Panel', 'gear', {'showMap': 0, 'set_screen': 2})}}
+    {{/if}}
     <div style="float: right; width: 365px;">
         {{:helper.link('Change Z-Level', 'script', {'zlevel' : 1})}}
         <span style="float: left;">Zoom Level:&nbsp;</span>
