--- a/nano/css/cmc.css
+++ b/nano/css/cmc.css
@@ -21,6 +21,7 @@ td, th {
   background: url(uiMaskBackground.png);
   padding-top: 5px;
   padding-bottom: 5px;
+  display: block;
 }
 
 .cmc_btn {
