--- a/goon/browserassets/css/browserOutput.css
+++ b/goon/browserassets/css/browserOutput.css
@@ -270,6 +270,7 @@ h1.alert, h2.alert		{color: #000000;}
 .info					{color: #0000CC;}
 .notice					{color: #000099;}
 .bnotice				{color: #000099; 	font-weight: bold;}
+.darknotice			{color: #000000;}
 .sans					{font-family: 'Comic Sans MS', cursive, sans-serif;}
 .alien					{color: #543354;}
 .ancient				{color: #008B8B;	font-stye: italic;}
@@ -292,6 +293,7 @@ h1.alert, h2.alert		{color: #000000;}
 .red					{color: #FF0000;}
 .grey					{color: #585858; font-family: Dotum, sans-serif;}
 .skeleton				{color: #585858; font-weight: bold; font-style: italic;}
+.mushroom				{color: #4B0082;}
 .gutter					{color: #61380B; font-style: italic;}
 .golem					{color: #B4DBCB; font-weight: bold;}
 .slime					{color: #34A7Af;}
@@ -303,7 +305,6 @@ h1.alert, h2.alert		{color: #000000;}
 .good					{color: green;}
 .average				{color: #FF8000;}
 .bad					{color: #FF0000;}
-.mushroom				{color: #4B0082;}
 /* /vg/ Saycode Rewrite */
 .italics, .talkinto		{font-style:italic;}
 .whisper				{font-style:italic;color:#333333;}
@@ -314,7 +315,7 @@ h1.alert, h2.alert		{color: #000000;}
 
 .connectionClosed, .fatalError {background: red; color: white; padding: 5px;}
 .connectionClosed.restored {background: green;}
-.internal.boldnshit {color: blue; font-weight: bold;}
+.internal.boldnshit {color: #000099; font-weight: bold;}
 
 /* HELPER CLASSES */
 .text-normal {font-weight: normal; font-style: normal;}
